--- a/index.html
+++ b/index.html
@@ -1,36 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Little Lemon</title>
-    </head>
-    <body>
-        <h1>Our Menu</h1>
-        <h2>Falafel</h2>
-        <p>Chickpea, herbs and spices.</p>
-        <img src="farafal.jpg" width="240" height="135" alt="a falafel">
-        <h2>Pasta Salad</h2>
-        <p>Lettuce, vegetables and mozzarella.</p>
-        <img src="salad.webp" width="240" height="135" alt="a salad">
-        <a href="location.html">Our location</a>
-        <style>
-            table ,td ,th {
-                border: 1px solid black;
-                border-collapse: collapse;
-            }
-        </style>
-        <table>
-            <tr>
-                <th>Dish</th>
-                <th>Price</th>
-            </tr>
-            <tr>
-                <td>falafel</td>
-                <td>10.00$</td>
-            </tr>
-            <tr>
-                <td>salad</td>
-                <td>12.00$</td>
-            </tr>
-        </table>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Senesh Imalka</title>
+</head>
+<body>
+    
+</body>
 </html>
