--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Senesh Imalka</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Imalak Perera</h1>
+        <h2>developer</h2>
+        <h3>Email</h3>
+        <h4>seneshimalka@outlook.com</h4>
+        <h3>Birthday</h3>
+        <h4>May 25,2005</h4>
+    </div>
 </body>
 </html>
