add css file and make changes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senesh Imalka</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Imalak Perera</h1>
-        <h2>developer</h2>
+    <div class="informationtab">
+        <div>
+            <h1>Imalak Perera</h1>
+            <h2 class="role">developer</h2>
+        </div>
         <h3>Email</h3>
         <h4>seneshimalka@outlook.com</h4>
         <h3>Birthday</h3>
