--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senesh Imalka</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="informationtab">
-        <div>
-            <h1>Imalak Perera</h1>
-            <h2 class="role">developer</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-xs-12">
+                <h1>Imalka Perera</h1>
+                <h2>Developer</h2>
+                <h1>Email</h1>
+                <h2>seneshimalka@outlook.com</h2>
+            </div>
+            <div class="col-md-4 col-xs-12">
+                
+            </div>
         </div>
-        <h3>Email</h3>
-        <h4>seneshimalka@outlook.com</h4>
-        <h3>Birthday</h3>
-        <h4>May 25,2005</h4>
     </div>
 </body>
 </html>
