--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <h2>Developer</h2>
                 <h1>Email</h1>
                 <h2>seneshimalka@outlook.com</h2>
+                <a href="profile.html">My Profile</a>
             </div>
             <div class="col-md-4 col-xs-12">
                 
