--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="refresh" content="0; url=profile" />
   <title>Your Profile</title>
 </head>
 <body>
