--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh"  url=profile" />
+  <meta url=profile" />
   <title>Your Profile</title>
 </head>
 <body>
