--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Imalka Perera">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyword" content="Imalkaperera.tech,imalkaperera,Imalka">
+    <meta name="robot" content="index,follow">
     <title>Senesh Imalka</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
