--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Jaela, Western, Sri Lanka</address>
+              <address>Ja-Ela, Western, Sri Lanka</address>
             </div>
 
           </li>
