--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="/cdn-cgi/l/email-protection#88e0ede4e4e7c8fdfee1e6ecfdeafae7a6e5ed" class="contact-link"><span class="__cf_email__" data-cfemail="2841464e47685d5e41464c5d4a5a47064b4745">hpsimalkaperera@gmail.com</span></a>
+              <a href="/cdn-cgi/l/email-protection#88e0ede4e4e7c8fdfee1e6ecfdeafae7a6e5ed" class="contact-link"><span class="__cf_email__" data-cfemail="2841464e47685d5e41464c5d4a5a47064b4745">seneshimalka@outlook.com</span></a>
             </div>
 
           </li>
