--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Senesh Imalka</title>
       <meta name="google-site-verification" content="XBaUcgq73_r3FhQBWN_Lu02OuSsYsV3Bw4LAqxUxoC0">
+      <meta property="og:title"content="Imalka Perera's Website">
+      <meta property="og:type"content="website">
+      <meta property="og:url"content="www.imalkaperera.tech">
+      
       <!--
          - favicon
          -->
