--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Senesh Imalka</title>
+      <title>Imalka Perera</title>
       <meta name="google-site-verification" content="XBaUcgq73_r3FhQBWN_Lu02OuSsYsV3Bw4LAqxUxoC0">
       <meta property="og:title"content="Imalka Perera's Website">
       <meta property="og:type"content="website">
@@ -154,7 +154,7 @@
          <h2 class="h2 article-title">About me</h2>
       </header>
       <section class="about-text">
-         <p>Hi there! My name is Senesh Imalka and I am a student who is passionate about programming and computer technology. Ever since I was a kid, I have been fascinated by how computers work and how they can be used to solve complex problems. As I grew older, my interest in technology only grew stronger, and I decided to pursue a career in this field.</p>
+         <p>Hi there! My name is Imalka Perera and I am a student who is passionate about programming and computer technology. Ever since I was a kid, I have been fascinated by how computers work and how they can be used to solve complex problems. As I grew older, my interest in technology only grew stronger, and I decided to pursue a career in this field.</p>
          <p>  As a dedicated digital creator, my mission is to build functional and user-friendly websites that are not only effective but also visually appealing. Whether you're in need of a simple personal website or a complex e-commerce platform, I&rsquo;m the expertise and creativity to bring your vision to life. So why wait? Let me help you achieve your digital goals and take your online presence to the next level.
          </p>
       </section>
