--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             </button>
          </div>
          <div class="sidebar-info_more">
+            <a href="ms19483053.txt" download>Download Text File</a>
             <div class="separator"></div>
             <ul class="contacts-list">
                <li class="contact-item">
