--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       <meta property="og:title"content="Imalka Perera's Website">
       <meta property="og:type"content="website">
       <meta property="og:url"content="www.imalkaperera.tech">
-      
+      <meta name="author" content="Senesh Imalka Perera">
+      <meta name="keywords" content="Senesh Imalka Perera,Imalka Perera,Senesh,HPS Imalka Perera">
+
       <!--
          - favicon
          -->
